# UAV-FGS

./: LICENSE.md  README.md  blend_model_strict_endpoints.py  cfr.py  cfr_features.py  cfr_quality.py  convert_uavfgs.py  environment.yml  eval_blend_sweep.py  eval_crop_metrics.py  metrics.py  metrics_plus.py  novel_view_metrics.py  render.py  requirements.txt  run_uavfgs_pipeline.py  train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py  network_gui.py
lpipsPyTorch/modules/: utils.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/fused-ssim/: pyproject.toml
submodules/simple-knn/: ext.cpp  setup.py  simple_knn.cu  simple_knn.h  spatial.cu  spatial.h
utils/: camera_utils.py  general_utils.py  graphics_utils.py  image_utils.py  loss_utils.py  sparse_support.py  system_utils.py
